Adding logic to compare arrays to user input

--- a/index.html
+++ b/index.html
@@ -8,5 +8,23 @@
 </head>
 <body>
     
+    <script> 
+
+        // Create an array of favorite bands
+        var bands = ["linkin park", "chevelle", "deadmau5", "daft punk"];
+
+        var userBand = prompt("Who is your favorite band");
+
+        console.log(bands.indexOf(userBand));
+
+        var match = bands.indexOf(userBand);
+
+        if(match > -1){
+            console.log("Thats one of my favorite bands!!!");
+        } else {
+            console.log("Nah, Theyre pretty lame");
+        }
+
+    </script>
 </body>
 </html>
